# L-Agent-2

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
agent/cli/: app.py  commands.py  config.py
agent/config/: settings.py
agent/context/: compressor.py
agent/core/: __init__.py  context.py  factory.py  lifecycle.py  runner.py
agent/home/: __init__.py  client.py
agent/llm/: __init__.py  types.py
agent/middleware/: __init__.py  base.py  chain.py
agent/steps/: __init__.py  after_agent.py  base.py  before_agent.py  before_model.py  before_tool.py  registry.py
agent/storage/: sqlite.py
agent/timeline/: resume.py  rewind.py  session_factory.py  store.py
agent/tools/builtin/: __init__.py  file_ops.py  terminal.py
docs/: design.md  implementation-plan.md  第一版设计讨论.txt
docs/steps/: step-1-runtime-kernel.md  step-2-model-call.md  step-5-resume-rewind.md  step-8-advanced.md
docs/superpowers/plans/: 2026-06-03-l-agent-directory-scaffold.md  2026-06-04-l-agent-agent-home-integration.md  2026-06-08-agent-home-only-builtin-registry.md  2026-06-09-agent-home-agent-file.md  2026-06-10-session-messages.md
tests/: test_agent_home_cli.py  test_agent_home_client.py  test_agent_home_memory.py  test_agent_home_tools.py  test_agent_runner.py  test_before_agent.py  test_builtin_tools.py  test_cli_config.py  test_cli_events.py  test_lifecycle_steps.py  test_middleware.py  test_model_call_pipeline.py  test_settings.py  test_timeline_persistence.py  test_timeline_resume.py  test_timeline_rewind.py  test_tool_dispatcher.py
(+4 files in other folders)
